# lid_monitor

./: Cargo.toml  lid_monitor.c  meson.build
lid_monitor/: lid_monitor.c  meson.build
lid_monitor_daemon/: lid_monitor_daemon.c  meson.build
src/: main.rs
